refactor: changes add new subscriber group body model
    - changes the body model of add new subscriber group api that makes it
      similar to get endpoint and also make it more readable by human!
    - updates thunder client api samples
